--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>I am passionate about creating impactful projects that integrate advanced algorithms and creative solutions. With experience in machine learning, AI, and data-driven development, I aim to bring innovative ideas to life.</p>
         </div>
         <div class="image-container">
-            <img src="images/linkedin_me.jpeg" alt="Parth Durgude">
+            <img src="linkedin_me.jpeg" alt="Parth Durgude">
         </div>
     </section>
 
@@ -28,19 +28,19 @@
         <div class="institutions">
             <div class="institution">
                 <div class="logo-container">
-                    <img src="images/vit_logo.webp" alt="Vishwakarma Institute of Technology">
+                    <img src="vit_logo.webp" alt="Vishwakarma Institute of Technology">
                 </div>
                 <p>Vishwakarma Institute of Technology</p>
             </div>
             <div class="institution">
                 <div class="logo-container">
-                    <img src="images/kv_logo.webp" alt="Kendriya Vidyalaya CME">
+                    <img src="kv_logo.webp" alt="Kendriya Vidyalaya CME">
                 </div>
                 <p>Kendriya Vidyalaya CME, Pune</p>
             </div>
             <div class="institution">
                 <div class="logo-container">
-                    <img src="images/kv_logo.webp" alt="CBSE SSC">
+                    <img src="kv_logo.webp" alt="CBSE SSC">
                 </div>
                 <p>Kendriya Vidyalaya CME, Pune</p>
             </div>
@@ -86,21 +86,21 @@
             <!-- Project 1 -->
             <div class="project">
                 <div class="project-logo-container">
-                    <img src="images/vfs_logo.jpg" alt="Virtual Fashion Stylist Logo">
+                    <img src="vfs_logo.jpg" alt="Virtual Fashion Stylist Logo">
                 </div>
                 <p>Virtual Fashion Stylist</p>
             </div>
             <!-- Project 2 -->
             <div class="project">
                 <div class="project-logo-container">
-                    <img src="images/disease logo.jpg" alt="Disease Classification Logo">
+                    <img src="disease logo.jpg" alt="Disease Classification Logo">
                 </div>
                 <p>Disease Classification</p>
             </div>
             <!-- Project 3 -->
             <div class="project">
                 <div class="project-logo-container">
-                    <img src="images/bus_logo.jpg" alt="Bus Tracking Application Logo">
+                    <img src="bus_logo.jpg" alt="Bus Tracking Application Logo">
                 </div>
                 <p>Bus Tracking Application</p>
             </div>
